SCRUM-11 : Fix code style issues according to Checkstyle rules